--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,15 @@ android:orientation="vertical">
         android:scaleType="fitCenter"
         android:background="@null"
         android:layout_marginLeft="100dp"/>
+    <TextView
+        android:id="@+id/textVersion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:layout_marginLeft="5dp"
+        android:layout_gravity="bottom"
+        android:text="version"/>
 </LinearLayout>
 <FrameLayout
     android:id="@+id/FragmentsFrame"
